syntax = "proto3";

package authpb;

option go_package = "github.com/amirzayi/clean_architect/api/proto/authpb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AuthService {
  rpc Register(RegisterRequest) returns(google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }
}

message RegisterRequest {
  string email = 1;
  string phone_number = 2;
  string password = 3;
}
